fix(109): improve tutorial tooltip positioning on mobile

--- a/frontend/projects/webapp/src/app/styles/components/_shepherd-theme.scss
+++ b/frontend/projects/webapp/src/app/styles/components/_shepherd-theme.scss
@@ -458,7 +458,6 @@
 @media (max-width: 767px) {
   .shepherd-element {
     max-width: calc(100vw - 32px);
-    margin: 16px;
   }
 
   .shepherd-header {
